ingress/urlshortener-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urlshortener-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: my-static-ip
    networking.gke.io/managed-certificates: urlshortener-cert,api-cert
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: my-short-url.com
      http:
        paths:
          - path: /route
            pathType: Prefix
            backend:
              service:
                name: urlshortener-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  number: 80
    - host: api.my-short-url.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: urlshortener-service  # Replace with your actual API service name
                port:
                  number: 80
